# rl-selfplay-mnk

./: .gitignore  README.md  pyproject.toml  sweep_config.yaml
result_analysis/: draw.ipynb
src/: compare_models.py  count_params.py  model_export.py  play.py  train.py  train_all.py  train_all_13.py  train_all_15.py  train_all_s.py  train_mnk.py  train_short.py  train_worker.py  trainall.py  trainl.py  trainsimple.py  validation.py  vec_env_test.py  vec_train_mnk.py  vector_self_play_test.py
src/alg/: __init__.py  a2c.py  cnn.py  cnn_conv1x1.py  compile.py  entropy_scheduler.py  lr_scheduler.py  ppo.py  resnet.py  resnet_conv1x1.py  rollout_buffer.py  transformer.py  weight_init.py
src/alg/architectures/: cnn.py  configs.py  resnet.py  sgrtransformer.py  transformer.py
src/alg/legacy_arch/: cnn.py  resnet.py  transformer.py  weight_init.py
src/env/: __init__.py  constants.py  mnk_game.py  mnk_game_env.py  torch_vector_mnk_env.py  vector_mnk_env.py
src/model_comparison/: __init__.py  elo_tracker.py  match_runner.py  model_loader.py  tournament_manager.py  visualizer.py
src/selfplay/: __init__.py  opponent_pool.py  policy.py  random_play_wrapper.py  self_play_wrapper.py  torch_self_play_wrapper.py  validation.py  vector_mnk_self_play.py  vector_self_play_wrapper.py
src/tests/: debug_self_play.py  debug_vector_mnk_env.py  test_mnk_integration.py  test_utils.py  test_vector_mnk_env.py  test_vector_mnk_self_play.py
src/utils/: hardware.py  model_export.py
