[project]
name = "mnk-selfplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "gymnasium[box2d]>=1.2.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.5",
    "moviepy>=2.2.1",
    "numpy>=2.3.2",
    "pettingzoo>=1.25.0",
    "plotly>=6.3.1",
    "pygame>=2.6.1",
    "sb3-contrib>=2.7.0",
    "seaborn>=0.13.2",
    "stable-baselines3>=2.7.0",
    "swig>=4.3.1",
    "torch==2.7",
    "tqdm>=4.67.1",
    "transformers>=4.56.0",
    "trl>=0.22.1",
    "wandb>=0.21.1",
]
